# todoist-quick-add

./: README.md  package.json
.github/workflows/: main.yml
src/: App.svelte  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
